crates/dq-core/tests/snapshots/error_render__console_templated_file.snap
---
source: crates/dq-core/tests/error_render.rs
assertion_line: 258
expression: rendered
---
file contains Go template syntax (line 7): tag: {{ .Values.image.tag }}
  hint: use --allow-templates to parse anyway (formatting may break) or --raw-template-strings to preserve template values as opaque strings
