crates/dq-core/tests/snapshots/error_render__console_write_io.snap
---
source: crates/dq-core/tests/error_render.rs
assertion_line: 284
expression: rendered
---
I/O error writing '/tmp/x.yaml': perm denied
