crates/dq-core/tests/snapshots/error_render__path_kubernetes_label_typo.snap
---
source: crates/dq-core/tests/error_render.rs
assertion_line: 179
expression: view(&err)
---
kind: path
pointer: /metadata/lables/app.kubernetes.io~1name
matched_prefix: /metadata
path_kind:
  kind: MissingKey
did_you_mean:
  - labels
