crates/dq-core/tests/snapshots/error_render__path_typo_suggests_close_key.snap
---
source: crates/dq-core/tests/error_render.rs
assertion_line: 169
expression: view(&err)
---
kind: path
pointer: /server/prot
matched_prefix: /server
path_kind:
  kind: MissingKey
did_you_mean:
  - port
